[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/menu/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://screens/menu/background.png" type="Texture" id=2]
[ext_resource path="res://widgets/menu_button/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://containers/home_display/home_display.tscn" type="PackedScene" id=4]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="ButtonsLayout" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -260.0
margin_right = 560.0
margin_bottom = 340.0
alignment = 2

[node name="BoardGameBtn" parent="ButtonsLayout" instance=ExtResource( 3 )]
visible = false
margin_right = 400.0
button_text = "Board Demo"

[node name="SlayBtn" parent="ButtonsLayout" instance=ExtResource( 3 )]
margin_top = 268.0
margin_right = 400.0
margin_bottom = 376.0
button_text = "StS Combat Demo"

[node name="BuilderBtn" parent="ButtonsLayout" instance=ExtResource( 3 )]
margin_top = 380.0
margin_right = 400.0
margin_bottom = 488.0
button_text = "Deck Builder"

[node name="QuitBtn" parent="ButtonsLayout" instance=ExtResource( 3 )]
margin_top = 492.0
margin_right = 400.0
margin_bottom = 600.0
button_text = "Quit"

[node name="HomeDisplay" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 20.0
margin_top = 20.0

[connection signal="pressed" from="ButtonsLayout/BoardGameBtn" to="." method="_on_BoardGameBtn_pressed"]
[connection signal="pressed" from="ButtonsLayout/SlayBtn" to="." method="_on_SlayBtn_pressed"]
[connection signal="pressed" from="ButtonsLayout/BuilderBtn" to="." method="_on_BuilderBtn_pressed"]
[connection signal="pressed" from="ButtonsLayout/QuitBtn" to="." method="_on_QuitBtn_pressed"]
